syntax = "proto3";

package user;

service UserService {
  rpc VerifyToken(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string userId = 1;
}
